# advent-of-code

./: Cargo.toml
advent-2019/: Cargo.toml
advent-2019/src/: main.rs
advent-2019/src/intcode/: mod.rs
advent-2019/src/parsers/: intcode.rs  mod.rs
advent-2019/src/solutions/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs
advent-2020/: Cargo.toml
advent-2020/src/: main.rs
advent-2020/src/solutions/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
advent-2021/: Cargo.toml
advent-2021/src/: main.rs
advent-2021/src/solutions/: day1.rs  day2.rs  day3.rs
advent-2025/: Cargo.toml
advent-2025/src/: main.rs
advent-2025/src/solutions/: day1.rs
advent-shared/: Cargo.toml
advent-shared/src/: lib.rs
advent-shared/src/parsers/: identity.rs  mod.rs  pair.rs  raw.rs  vec_of.rs
src/: day1_1.rs  main.rs
src/parsers/: mod.rs  vec_of.rs
src/solutions/: day1_1.rs  day1_2.rs  day2.rs  day3.rs  mod.rs
