[package]
name = "advent-2021"
version = "0.1.0"
authors = ["Pi Lanningham <pi.lanningham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-shared = { path = "../advent-shared" }
anyhow = "1.0.34"
matches = "0.1.8"
nom = "7.0.0"
num = "0.4.0"
intrusive-collections = "0.9.0"